--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -208,28 +208,160 @@ article.post {
 
 // Related posts
 .related {
-  padding: var(--spacer-2) 7rem 0 7rem;
+  padding: var(--spacer-2) 7rem;
+  .post.found + & {
+    padding: 0 3.5rem 3.5rem calc(3.5rem + 40px);
+  }
+
+  & > h3 {
+    text-align: center;
+    font-size: var(--body-font-size);
+    line-height: var(--body-line-height);
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+  }
+
+  a:active {
+    position: relative;
+    top: 2px;
+  }
 }
 
 .related-posts {
-  padding-left: 0;
   list-style: none;
+  display: flex;
+  padding: 0;
+  margin-bottom: 0;
 
-  h3 {
-    margin-top: 0;
+  li {
+    margin: 0 0.5rem;
+    &:first-child { margin-left: 0; }
+    &:last-child { margin-right: 0; }
   }
 
-  a {
-    text-decoration: none;
+  .post-thumbnail {
+    display: block;
+    width: 100%;
+    height: 100px;
+    margin-bottom: 0.8rem;
 
-    small {
-      color: var(--gray-600);
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      margin: 0;
     }
+  }
+
+  .post-title {
+    margin-bottom: 0.2rem;
+    a:after { content: ' \2192'; display: inline-block; }
+  }
+
+  .post-description {
+    font-size: 0.85rem;
+    line-height: 1.7;
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 45rem) {
+  article.post {
+    &.features, &.lab {
+      margin: -4.5rem 2rem 0 2rem;
+      padding: 2rem;
+    }
+    p > img[src$="#half"] {
+      max-width: calc(50% - 0.5rem);
+      &:nth-child(n+3) { margin-top: -0.5rem; }
+    }
+    p > img[src$="#bighalf"] {
+      max-width: calc(50% + 3.5rem);
+      &:nth-child(odd) { 
+        margin-left: -4rem;
+        margin-right: 0.5rem; }
+      &:nth-child(even) {
+        margin-left: 0.5rem;
+        margin-right: -4rem; }
+      &:nth-child(n+3) { margin-top: -0.5rem; }
+    }
+    p > img[src$="#big"] {
+      margin: 2rem -4rem 2rem -4rem;
+      width: calc(100% + 8rem);
+      max-width: calc(100% + 8rem);
+      &:nth-child(n+2) { margin-top: -0.5rem; }
+    }
+  }
+  .related {
+    padding: var(--spacer-2) 4rem;
+    .post.found + & {
+      padding: 0 0 var(--spacer-2) 40px;
+    }
+  }
+  .post.found {
+    padding: 0;
   }
 }
 
 @media (max-width: 35rem) {
-  .post.found {
-      padding: 0;
+  .post-thumbnail.header {
+    display: block;
+    width: 100%;
+    height: 45vw;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      margin: 0;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+  }
+  article.post {
+    &.features, &.lab {
+      margin: 0;
+      padding: 1.5rem;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+    p > img[src$="#half"] {
+      max-width: 100%;
+      float: none;
+    }
+    p > img[src$="#bighalf"] {
+      max-width: calc(50% + 2rem);
+      &:nth-child(odd) { 
+        margin-left: -2.5rem;
+        margin-right: 0.25rem; }
+      &:nth-child(even) {
+        margin-left: 0.25rem;
+        margin-right: -2.5rem; }
+    }
+    p > img[src$="#big"] {
+      margin: 1rem -2.5rem 1rem -2.5rem;
+      width: calc(100% + 5rem);
+      max-width: calc(100% + 5rem);
+    }
+  }
+  .related {
+    padding: 1.5rem;
+    .post.found + & {
+      padding: 0 0 1.5rem 0;
+    }
+  }
+  .related-posts {
+    flex-direction: column;
+
+    li {
+      margin: 0.8rem 0;
+      &:first-child { margin-top: 0; }
+      &:last-child { margin-bottom: 0; }
+    }
+
+    .post-thumbnail {
+      height: 35vw;
+    }
   }
 }
